fixed the gap in row in leaderboard

--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -22,7 +22,7 @@
   /* overflow-y: hidden; */ /* You can remove this line or keep it as a comment if needed */
   flex-shrink: 0;
   display: grid;
-  grid-template-columns: 4fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 4fr 2fr 1fr 1fr 1fr;
   flex-direction: row;
   align-items: center;
   justify-content: center;
